# safe_arithmetic

./: .gitignore  CMakeLists.txt  README.md
include/safe_arithmetic/: safe_arithmetic.h  safe_arithmetic_int.h  safe_arithmetic_long.h
src/: safe_arithmetic_int.c  safe_arithmetic_long.c
test/: safe_arithmetic_int_test.cpp
